Fix the layout to enable overflow

--- a/scss/markdown_editor.scss
+++ b/scss/markdown_editor.scss
@@ -18,9 +18,11 @@
 .md-editor-preview {
   display: flex;
   flex: 1;
+  overflow: auto;
 }
 
 // Markdown-preview
 .md-preview-wrapper {
   overflow-y: auto;
 }
+
